# fastapi-ms-template

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
_service_name/: main.py
service_name/: main.py
tests/: test_main.py
